# stuff2

./: .gitignore
ImagePoccessingFramework/: CMakeLists.txt
ImagePoccessingFramework/framework/: CMakeLists.txt
ImagePoccessingFramework/src/: CmakeLists.txt  entry_point.h  main.cpp
ImagePocessingFramework/: CMakeLists.txt
ImagePocessingFramework/src/: CmakeLists.txt  main.cpp
IntegralCalculation/: CmakeLists.txt  main.cpp
IntegralCalculation/timer/: timer.cpp  timer.h
Korteweg–de Vries/: CMakeLists.txt
Korteweg–de Vries/main/: CmakeLists.txt  main.cpp
MPI/: MPI.sln
MPI/MPI/: MPI.vcxproj  MPI.vcxproj.filters  defined_integral.cpp  defined_integral.h  main.cpp
OuliningFilters/: CMakeLists.txt
OuliningFilters/framework/: CMakeLists.txt
OuliningFilters/graduate_work/: CmakeLists.txt
RungeKutta/: CMakeLists.txt  main.cpp
RungeKutta/runge_kutta/: runge_kutta.cpp  runge_kutta.h
WinSock/Client/: Client.vcxproj
WinSock/basic_chat/: basic_chat.sln
WinSock/basic_connection/: WinSock.sln
WinSock/basic_packets/: basic_packets.sln
battle_city_online/: battle_city_online.sln
battle_city_online/battle_city_online/: .map  battle_city_online.vcxproj  battle_city_online.vcxproj.filters  client.cpp  game_loop.cpp  main.cpp  main_window.cpp  server.cpp
battle_city_online/battle_city_server/: battle_city_server.vcxproj
battle_city_online/server/: main.cpp  messages.cpp  server.vcxproj  server.vcxproj.filters  time.cpp
gaussian's_method/: gaussian's_method.sln
gaussian's_method/gaussian's_method/: gaussian's_method.vcxproj  main.cpp
genetic_alg/: genetic_alg.sln
genetic_alg/genetic_alg/: genetic_alg.vcxproj  main.cpp  smallLib.cpp
image_converter/: image_converter.sln
image_converter/image_converter/: image_converter.cpp  image_converter.vcxproj  image_converter.vcxproj.filters
imgui_start/main/: main.cpp
jpeg_converter/: jpg_converter.sln
lenear_programming/: lenear_programming.sln
lines/: guiAl.sln
lines/guiAl/: draw.cpp  main.cpp  (+3 more)
matrix_mul/: CMakeLists.txt
matrix_mul/src/: CMakeLists.txt  main.cpp  mpi_send.h
matrix_mul/src/geometry/: geometry.h  mat.h  mat.inl  multiplication.h  multiplication.inl  vec.h  vec.inl  vec_view.h  vec_view.inl
small_lib/: small_lib.sln
sobel/: CMakeLists.txt
sobel/dependencies/stb_image/: CMakeLists.txt
sobel/src/: CMakeLists.txt  main.cpp
sobel/src/image/: color.cpp  color.h  image.cpp  image.h  image_base.cpp  image_base.h
sobel/src/kernel/: convolution.h  image_conversion.h  sobel.h
sobel/src/time/: timer.cpp  timer.h
stirling_approximation/: stirling_approximation.sln
thread_pool/: thread_pool.sln
(+282 files in other folders)
